# HSE_project_space_game

./: CMakeLists.txt  main.cpp
include/: Appliance.h  Foodmaker.h  FuelMaker.h  GameEngine.h  InformationPlayer.h  Map.h  NotEnoughMoney.h  Order.cpp  Order.h  PartAssembler.h  ProductionManager.h  ResourceOrder.h  Ship.h  StartScreen.h  wallet.h
src/: Appliance.cpp  FoodMaker.cpp  FuelMaker.cpp  GameEngine.cpp  InformationPlayer.cpp  Map.cpp  NotEnoughMoney.cpp  Order.cpp  PartAssembler.cpp  ProductionManager.cpp  ResourceOrder.cpp  Ship.cpp  StartScreen.cpp  wallet.cpp
tests/: CMakeLists.txt  test_Appliance.cpp  test_FoodMaker.cpp  test_FuelMaker.cpp  test_InfoPlayer.cpp  test_PartAssembler.cpp  test_ProductionManager.cpp  test_ResourceOrder.cpp  test_Ship.cpp  test_wall.cpp
